apps/stash/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stash
  namespace: default
  labels:
    app: stash
spec:
  selector:
    matchLabels:
      app: stash
  # replicas: 1
  strategy:
    type: Recreate # sqlite db in /root/.stash; never run two at once
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: stash
      labels:
        app: stash
    spec:
      containers:
        - name: stash
          image: stashapp/stash:latest
          ports:
            - containerPort: 9999
              name: stash
          volumeMounts:
            - name: config
              mountPath: /root/.stash
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /home/ad/homelab/data
            type: Directory
        - name: config
          hostPath:
            path: /home/ad/homelab/config/stash
            type: Directory
      restartPolicy: Always
---
