apps/stash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: default
spec:
  selector:
    app: stash
  ports:
    - name: stash
      port: 9999
      targetPort: 9999
